--- a/Rectify11Installer/Rectify11/Rectify11/ResourceRedirect/theme.ini
+++ b/Rectify11Installer/Rectify11/Rectify11/ResourceRedirect/theme.ini
@@ -23,10 +23,10 @@
 %SystemRoot%\System32\audiosrv.dll=.\Windhawk Resources\audiosrv.dll
 %SystemRoot%\System32\AuditNativeSnapIn.dll=.\Windhawk Resources\AuditNativeSnapIn.dll
 %SystemRoot%\System32\auditpolmsg.dll=.\Windhawk Resources\auditpolmsg.dll
-%SystemRoot%\System32\auotplay.dll=.\Windhawk Resources\Autoplay.dll
 %SystemRoot%\System32\AuthBrokerUI.dll=.\Windhawk Resources\AuthBrokerUI.dll
 %SystemRoot%\System32\authfwgp.dll=.\Windhawk Resources\authfwgp.dll
 %SystemRoot%\System32\authui.dll=.\Windhawk Resources\authui.dll
+%SystemRoot%\System32\autoplay.dll=.\Windhawk Resources\autoplay.dll
 %SystemRoot%\System32\axinstui.exe=.\Windhawk Resources\axinstui.dll
 %SystemRoot%\System32\baaupdate.exe=.\Windhawk Resources\baaupdate.dll
 %SystemRoot%\System32\basecsp.dll=.\Windhawk Resources\basecsp.dll
@@ -240,6 +240,7 @@
 %SystemRoot%\System32\occache.dll=.\Windhawk Resources\occache.dll
 %SystemRoot%\System32\odbcad32.exe=.\Windhawk Resources\odbcad32.dll
 %SystemRoot%\System32\odbcint.dll=.\Windhawk Resources\odbcint.dll
+%SystemRoot%\System32\ole32.dll=.\Windhawk Resources\ole32.dll
 %SystemRoot%\System32\OptionalFeatures.exe=.\Windhawk Resources\OptionalFeatures.dll
 %SystemRoot%\System32\pautoenr.dll=.\Windhawk Resources\pautoenr.dll
 %SystemRoot%\System32\perfmon.exe=.\Windhawk Resources\perfmon.dll
@@ -313,6 +314,7 @@
 %SystemRoot%\System32\shwebsvc.dll=.\Windhawk Resources\shwebsvc.dll
 %SystemRoot%\System32\sigverif.exe=.\Windhawk Resources\sigverif.dll
 %SystemRoot%\System32\slui.exe=.\Windhawk Resources\slui.dll
+%SystemRoot%\System32\SndVol.exe=.\Windhawk Resources\SndVol.dll
 %SystemRoot%\System32\SndVolSSO.dll=.\Windhawk Resources\SndVolSSO.dll
 %SystemRoot%\System32\SpaceAgent.exe=.\Windhawk Resources\SpaceAgent.dll
 %SystemRoot%\System32\SpaceControl.dll=.\Windhawk Resources\SpaceControl.dll
@@ -321,6 +323,7 @@
 %SystemRoot%\System32\Speech\SpeechUX\SpeechUXWiz.exe=.\Windhawk Resources\SpeechUXWiz.dll
 %SystemRoot%\System32\speechuxcpl.dll=.\Windhawk Resources\speechuxcpl.dll
 %SystemRoot%\System32\spoolsv.exe=.\Windhawk Resources\spoolsv.dll
+%SystemRoot%\System32\spoolsvworker.exe=.\Windhawk Resources\spoolsvworker.dll
 %SystemRoot%\System32\sppcomapi.dll=.\Windhawk Resources\sppcomapi.dll
 %SystemRoot%\System32\srchadmin.dll=.\Windhawk Resources\srchadmin.dll
 %SystemRoot%\System32\srcore.dll=.\Windhawk Resources\srcore.dll
@@ -350,6 +353,7 @@
 %SystemRoot%\System32\tapiui.dll=.\Windhawk Resources\tapiui.dll
 %SystemRoot%\System32\Taskbar.dll=.\Windhawk Resources\Taskbar.dll
 %SystemRoot%\System32\taskbarcpl.dll=.\Windhawk Resources\taskbarcpl.dll
+%SystemRoot%\System32\Taskmgr.exe=.\Windhawk Resources\Taskmgr.dll
 %SystemRoot%\System32\tcpmonui.dll=.\Windhawk Resources\tcpmonui.dll
 %SystemRoot%\System32\telephon.cpl=.\Windhawk Resources\telephon.dll
 %SystemRoot%\System32\themecpl.dll=.\Windhawk Resources\themecpl.dll
@@ -431,3 +435,5 @@
 %SystemRoot%\System32\xwizard.exe=.\Windhawk Resources\xwizard.dll
 %SystemRoot%\System32\xwizards.dll=.\Windhawk Resources\xwizards.dll
 %SystemRoot%\System32\zipfldr.dll=.\Windhawk Resources\zipfldr.dll
+%SystemRoot%\WinSxS\*microsoft.windows.common-controls*5.82*\comctl32.dll=.\Windhawk Resources\comctl32_v5.dll
+%SystemRoot%\WinSxS\*microsoft.windows.common-controls*6.0*\comctl32.dll=.\Windhawk Resources\comctl32_v6.dll
